--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,11 @@ div.portfolio-description {
   grid-column: span 1;
 }
 
+.image {
+    height: 150px;
+    width: 150px;
+}
+
 @media (max-width: 768px) {
   div.wrapper{
     width: 96%;
@@ -226,5 +231,10 @@ div.portfolio-description {
 
   main {
     padding: 20px 20px 20px 20px;
+  }
+
+  .image {
+      height: 150px;
+      width: 150px;
   }
 }
